# PGNLib

./: .hgignore  CMakeLists.txt  Doxyfile.in  LICENSE.txt  README.md  SConstruct
doc/: CMakeLists.txt  Doxyfile.in
examples/example1/: CMakeLists.txt  example1.cpp
include/: Bitboard-inl.hpp  Bitboard.hpp  BitboardConstants.hpp  Chessboard-inl.hpp  Chessboard.hpp  Direction.hpp  PgnComment.hpp  PgnGame.hpp  PgnMove.hpp  PgnMoveTextItem.hpp  PgnNag.hpp  PgnParser.hpp  PgnParserException.hpp  PgnTags.hpp  PgnToken.hpp  PgnTokenizer.hpp  PgnVariation-inl.hpp  PgnVariation.hpp  Piece.hpp  SANParser.hpp  Utils.hpp
libs/unittest-cpp/vs_projects/vs2003_x86/: TestUnitTest++.vcproj  UnitTest++.vcproj
libs/unittest-cpp/vs_projects/vs2005_x64/: TestUnitTest++.vcproj  UnitTest++.vcproj
libs/unittest-cpp/vs_projects/vs2005_x86/: TestUnitTest++.vcproj  UnitTest++.vcproj
libs/unittest-cpp/vs_projects/vs2008_x64/: TestUnitTest++.vcproj  UnitTest++.vcproj
libs/unittest-cpp/vs_projects/vs2008_x86/: TestUnitTest++.vcproj  UnitTest++.vcproj
libs/unittest-cpp/vs_projects/vs2010_x64/: TestUnitTest++.vcxproj  UnitTest++.vcxproj
libs/unittest-cpp/vs_projects/vs2010_x86/: UnitTest++.vcxproj  (+1 more)
pgn/: hard.pgn  simple.pgn  test.pgn
prof/: CMakeLists.txt  mainProfile.cpp
src/: Bitboard.cpp  Bitboard.hpp  BitboardConstants.hpp  CMakeLists.txt  Chessboard-inl.hpp  Chessboard.cpp  Chessboard.hpp  Direction.hpp  PgnComment.hpp  PgnGame.hpp  PgnMove.hpp  PgnMoveTextItem.hpp  PgnNag.hpp  PgnParser.cpp  PgnParser.hpp  PgnTags.cpp  PgnTags.hpp  PgnToken.hpp  PgnTokenizer.cpp  PgnTokenizer.hpp  PgnVariation-inl.hpp  PgnVariation.cpp  PgnVariation.hpp  Piece.hpp  SANParser.cpp  SANParser.hpp  Utils.hpp
src/PgnParser/: Bitboard-inl.hpp  Bitboard.cpp  Bitboard.hpp  BitboardConstants.hpp  Chessboard-inl.hpp  Chessboard.cpp  Chessboard.hpp  Direction.hpp  DllPort.hpp  PgnComment.cpp  PgnComment.hpp  PgnGame.hpp  PgnMove.hpp  PgnMoveTextItem.hpp  PgnNag.hpp  PgnParser.cpp  PgnParser.hpp  PgnParserException.hpp  PgnTags.cpp  PgnTags.hpp  PgnToken.hpp  PgnTokenizer.cpp  PgnTokenizer.hpp  PgnVariation.cpp  PgnVariation.hpp  Piece.hpp  SANParser.cpp  SANParser.hpp  Utils.hpp  deep_const_ptr.hpp
src/PgnParserTests/: BitboardTests.cpp  ChessboardTests.cpp  PgnParserTests.cpp  PgnTagsTests.cpp  PgnTokenizerTests.cpp  PieceTests.cpp  SANParserTests.cpp  TestsMain.cpp  UtilsTests.cpp
src/examples/example2/: CMakeLists.txt  pgn2xml.cpp
tests/: BitboardTests.cpp  CMakeLists.txt  ChessboardTests.cpp  PgnParserTests.cpp  PgnTagsTests.cpp  PgnTokenizerTests.cpp  PieceTests.cpp  SANParserTests.cpp  UtilsTest.cpp  mainTests.cpp
vs/: PgnLib.sln
vs/PgnParserTests/: PgnParserTests.vcxproj  PgnParserTests.vcxproj.filters
(+4 files in other folders)
